Fixed overflow-x

--- a/front/styles/Mentions.module.css
+++ b/front/styles/Mentions.module.css
@@ -1,5 +1,6 @@
 .mainsection {
     width: 100vw;
+    min-height: 100vh;
     height: auto;
     display: flex;
     align-items: center;
